opam-version: "1.2"
maintainer: "ligand@free.fr"
authors: ["Francois BERENGER"]
homepage: "https://github.com/UnixJunkie/okdt"
bug-reports: "https://github.com/UnixJunkie/okdt/issues"
dev-repo: "git+https://github.com/UnixJunkie/okdt.git"
license: "BSD-3"
build: ["jbuilder" "build" "-p" name "-j" jobs]
depends: ["jbuilder" {build}]
